
Toplevel and debugger:
- PR#6468: toplevel now supports backtraces if invoked with OCAMLRUNPARAM=b
  (Peter Zotov and Jake Donham,
   review by Gabriel Scherer and Jacques-Henri Jourdan)

Bug fixes:
* PR#4539: change exception string raised when comparing functional values
  (Nicolas Braud-Santoni, report by Eric Cooper)
- PR#5887: move the byterun/*.h headers to byterun/caml/*.h to avoid header
    name clashes
  (Jérôme Vouillon and Adrien Nader and Peter Zotov)
* PR#6081: ocaml should add script's directory to search path, not current
    directory
  (Thomas Leonard and Damien Doligez)
- PR#6171: Error message confusing when a type escapes its scope.
- PR#6340: Incorrect handling of \r when processing "Windows" source files
  (Damien Doligez, report by David Allsopp)
* PR#6521: {Bytes,Char,String}.escaped are locale-dependent
  (Damien Doligez, report by Jun Furuse)
- PR#6526: ocamllex warning: unescaped newline in comment string
  (Damien Doligez, report by user 'dhekir')
- PR#6560: Wrong failure message for {Int32,Int64,NativeInt}.of_string
  (Maxime Dénès and Gabriel Scherer)
- PR#6648: show_module should indicate its elision
- PR#6650: Cty_constr not handled correctly by Subst
- PR#6651: Failing component lookup
* PR#6664: Crash when finalising lazy values of the wrong type.
  (Damien Doligez)
- PR#6744: Univars can escape through polymorphic variants (partial fix)
- PR#6752: Extensible variant types and scope escaping

Features wishes:
- PR#5418 (comments) : generate dependencies with $(CC) instead of gcc
- PR#6167: OCAMLPARAM support for disabling PIC generation ("pic=0")
  (Gabor Pali)
- PR#6367: introduce Asttypes.arg_label to encode labelled arguments
- PR#6452, GPR#140: add internal suport for custom printing formats
  (Jérémie Dimino)
- PR#6611: remove the option wrapper on optional arguments in the syntax tree
- PR#6691: install .cmt[i] files for stdlib and compiler-libs
  (David Sheets, request by Gabriel Radanne)